--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# my own stuff
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +105,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
